# edlib

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  MANIFEST.in  Makefile  README.md  annotated.html  appveyor.yml  classes.html  dir_8faa8f518d70e0818f201ee1644ba61d.html  dir_b326e1d0062fbdb69d0ce68868a046e5.html  dir_fc5069b72084290275e99ddb001cfed8.html  doxy-boot.js  edlib-config.cmake.in  edlib.pc.in  edlib_8h.html  edlib_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  index.html  landau_vishkin_comparison.md  makefile  md_README.html  menudata.js  meson.build  pages.html  params.json  ssw_comparison.md  structAlignmentData-members.html  structAlignmentData.html  structBlock-members.html  (+5 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml
apps/aligner/: aligner.cpp
apps/hello-world/: helloWorld.c
bindings/python/: .gitignore  MANIFEST.in  Makefile  README-tmpl.rst  README.md  README.rst  cedlib.pxd  edlib.pyx  pyedlib.c  pyedlib.pyx  setup.py  test.py
doxygen-files/: README.md  header.html
edlib/include/: edlib.h  edlib.hpp  export.h  pairHash.hpp
edlib/src/: edlib.cpp  edlib.tpp
edlibGeneric/include/: baseHeader.h  charHeader.h  disjointSet.h  edlibChar.h  edlibGeneric.h  genericHeader.h
edlibGeneric/src/: edlibChar.cpp  edlibGeneric.h
edlibGeneric/test/: SimpleEditDistance.h  SimpleEditDistance_Char.h  SimpleEditDistance_Generic.h  manualTest_c.c  manualTests.cpp  performanceTest_Char.cpp  performanceTest_Generic.cpp  runTests.cpp
experiments/: .gitignore  performance_comparison.nf
experiments/performance-comparison/: .gitignore  Dockerfile  performance-comparison.nf  run.sh
experiments/performance-comparison/myers/: .gitignore  Makefile  README.md  main.i  myers.c  parse.i
profiling/: callgrind-100kbp-NW-100kbp-ed_2977-g.out  callgrind-10kbp-HW-4Mbp-ed_298-g.out  callgrind-80bp-HW-100kbp-ed_4-g.out  callgrind-80bp-NW-80bp-ed_11-g.out
pythonGeneric/: Makefile  README.rst  cedlib.pxd  edlib.pyx  performance.py  setup.py  test.py  testGeneric.py
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_7.js  classes_1.js  classes_2.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  pages_0.js  searchdata.js  variables_1.js  variables_5.js
src/: Makefile  SimpleEditDistance.h  aligner  aligner.cpp  edlib.cpp  edlib.h  myers.cpp  myers.h  test.cpp
src/apps/aligner/: aligner.cpp
src/apps/hello-world/: helloWorld.c
src/tests/: SimpleEditDistance.h  test.cpp
test/: SimpleEditDistance.h  runTests.cpp
test/testMultiDefinition/: README.md  staticTestLib.cpp  testMultiDefinition.cpp
test_data/: .gitattributes  mutator.py  perf_tests.sh  perf_tests2.sh  perf_tests2g.sh  perf_tests2i.sh  perf_tests2p.sh  perf_tests2p.sh.save
test_data/Chromosome_2890043_3890042_0/: Chromosome_2890043_3890042_0.fasta  Chromosome_2890043_3890042_0_mutated_10per.fa  Chromosome_2890043_3890042_0_mutated_1per.fasta  Chromosome_2890043_3890042_0_mutated_25per.fa  Chromosome_2890043_3890042_0_mutated_3per.fa  Chromosome_2890043_3890042_0_mutated_50per.fa  Chromosome_2890043_3890042_0_mutated_5per.fa  Chromosome_2890043_3890042_0_mutated_65per.fa  Chromosome_2890043_3890042_0_mutated_75per.fa  mutated_60_perc.fasta  mutated_70_perc.fasta  mutated_80_perc.fasta  mutated_90_perc.fasta  mutated_94_perc.fasta  mutated_97_perc.fasta  mutated_99_perc.fasta
test_data/E_coli_DH1/: e_coli_DH1.fasta
test_data/E_coli_DH1/mason_illumina_read_10kbp/: e_coli_DH1_illumina_1x10000.fasta  e_coli_DH1_illumina_1x10000_mutated_10%.fasta  e_coli_DH1_illumina_1x10000_mutated_25%.fasta  e_coli_DH1_illumina_1x10000_mutated_3%.fasta  e_coli_DH1_illumina_1x10000_mutated_5%.fasta  e_coli_DH1_illumina_1x10000_mutated_50%.fasta  e_coli_DH1_illumina_1x10000_mutated_65%.fasta  e_coli_DH1_illumina_1x10000_mutated_75%.fasta  mutated_60_perc.fasta  mutated_70_perc.fasta  mutated_80_perc.fasta  mutated_90_perc.fasta  mutated_94_perc.fasta  mutated_97_perc.fasta
test_data/E_coli_DH1/mason_illumina_reads/100bp/: e_coli_DH1_illumina_1x100.fasta  mutated_60_perc.fasta  mutated_70_perc.fasta  mutated_80_perc.fasta  mutated_90_perc.fasta  mutated_94_perc.fasta  mutated_97_perc.fasta
test_data/E_coli_DH1/mason_illumina_reads/250bp/: e_coli_DH1_illumina_1x250.fasta  mutated_60_perc.fasta  mutated_70_perc.fasta  mutated_80_perc.fasta  mutated_90_perc.fasta  mutated_94_perc.fasta  mutated_97_perc.fasta
test_data/E_coli_DH1/prefix_10kbp/: e_coli_DH1_prefix10000.fasta  e_coli_DH1_prefix10000_oneline.fasta  e_coli_DH1_prefix10000_oneline_mutated_1%.fasta  e_coli_DH1_prefix10000_oneline_mutated_10%.fasta  e_coli_DH1_prefix10000_oneline_mutated_25%.fasta  e_coli_DH1_prefix10000_oneline_mutated_3%.fasta  e_coli_DH1_prefix10000_oneline_mutated_5%.fasta  e_coli_DH1_prefix10000_oneline_mutated_50%.fasta  e_coli_DH1_prefix10000_oneline_mutated_65%.fasta  e_coli_DH1_prefix10000_oneline_mutated_75%.fasta  mutated_60_perc.fasta  mutated_70_perc.fasta  mutated_80_perc.fasta  mutated_90_perc.fasta  mutated_94_perc.fasta  mutated_97_perc.fasta  mutated_99_perc.fasta
test_data/Enterobacteria_Phage_1/: Enterobacteria_phage_1.fasta  Enterobacteria_phage_1_oneline.fa  Enterobacteria_phage_1_oneline_mutated_1%.fasta  Enterobacteria_phage_1_oneline_mutated_10%.fa  Enterobacteria_phage_1_oneline_mutated_25%.fa  Enterobacteria_phage_1_oneline_mutated_3%.fa  Enterobacteria_phage_1_oneline_mutated_5%.fa  Enterobacteria_phage_1_oneline_mutated_50%.fa  Enterobacteria_phage_1_oneline_mutated_65%.fa  Enterobacteria_phage_1_oneline_mutated_75%.fa  Enterobacteria_phage_1_prefix_80bp.fasta  mutated_60_perc.fasta  mutated_70_perc.fasta  mutated_80_perc.fasta  mutated_90_perc.fasta  mutated_90_perc.fasta.out  mutated_90_perc_oneline.fasta  mutated_94_perc.fasta  mutated_97_perc.fasta  mutated_97_perc_infix_80bp.fasta  mutated_97_perc_prefix_80bp.fasta  mutated_99_perc.fasta
tests/: performance_tests.sh  vs_original_myers.sh
(+46 files in other folders)
